--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
+    "firebase": "^9.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
@@ -41,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:8800/api/"
+  "proxy": "http://localhost:8800/api/"
 }
